--- a/.env
+++ b/.env
@@ -1,11 +1,14 @@
 # Twilio
-TWILIO_SID=ACce9ee27f7165f64626cc79b478191c1c
-TWILIO_AUTH=cfe7b79ffe31d9274a92a89f48f4edc8
-TWILIO_FROM=+15644654915
-PARENT_PHONE=+919347644029
+#Note : Use Your own credentials. Create an account in twilio and then give your own credentials to get notifications and email to your mobile. Generate a US Trial Phone number. 
+Make sure to do this step before running the application. The credentials mentioned are not real. Add the emergency phone numbers under phonenumbers -> manage ->verified caller ids.
+#Also create a Gmail App password from Gmail account.
+TWILIO_SID=Axcdccxxxxxxxxxxxxxxxxxxxxxxxxsrbdrjfrxgrefregv
+TWILIO_AUTH=csriirbcnsorffrbsnvdcmv 
+TWILIO_FROM=+1xxxxxxxxxxxxxxxx
+PARENT_PHONE=+91xxxxxxxxxxx
 PARENT_EMAIL=sravyavajja3@gmail.com
 
 # Email
-EMAIL_USER=poojichimata3@gmail.com
-EMAIL_PASS=rawckshqymplqfvq      # your Gmail App Password
-EMAIL_FROM=poojichimata3@gmail.com
+EMAIL_USER=abc@1234.com
+EMAIL_PASS=sbcd efgh ijkl (16 letters)    # your Gmail App Password
+EMAIL_FROM=abcd@1234.com
